# athena-backend

./: .env.example  .gitignore  README.md  pyproject.toml
apps/api/migrations/: 001_init_db.py
apps/api/repository/: account_repository.py  profile_repository.py
apps/api/service/: account_service.py  auth_service.py
shared/config/: config.py  postgres.py
shared/models/: account.py  profile.py
shared/security/: password.py
tests/: conftest.py
tests/apps/api/repository/: test_account_repository.py  test_profile_repository.py
tests/apps/api/service/: test_account_service.py  test_auth_service.py
tests/shared/config/: test_config.py
tests/shared/models/: test_account.py  test_profile.py
tests/shared/security/: test_password.py
